# template_py

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  gazelle_python.yaml  pypi_pkgs_lock.bzl  pyrefly.toml  requirements.in  requirements.txt  requirements_lock.txt  update_requirements.sh
.circleci/: Dockerfile  config.yml
examples/cpp/: BUILD  hello_world_lib.cc  hello_world_lib.h  hello_world_lib_test.cc
examples/cuda/: BUILD  vector_add.cu  vector_add.cuh  vector_add_test.cu
examples/py_hello_world/: BUILD  hello_world.py  hello_world_lib.py  hello_world_test.py
examples/py_torch/: BUILD  load_pytorch.py  pytorch_test.py
